examples/errors/unused_func_result.alan
main(): proc
    foo(): int
    {
        return 42;
    }
{
    foo();
}